--- a/sign/link_login.html
+++ b/sign/link_login.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="../assets/logoh.png" type="image/png">
     <title>Akes Login</title>
   </head>
-  <body style="background: url(../assets/bg.jpg) center / cover fixed; ">
+  <body style="background: url(../assets/poto1.jpg) center / cover fixed; ">
   <div class="container p-5" style="border: none;">
     <div class="d-flex justify-content-center">
       <div class="card" style="width: 30rem;">
